<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/get_credits_textView"
        android:textSize="50sp"
        android:text="@string/get_credits_text"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="197dp"
        android:layout_height="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/your_credits"
        android:id="@+id/your_credits_textView"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:gravity="bottom"
        android:layout_gravity="center_horizontal|bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_10_text"
                android:id="@+id/textView"
                android:textSize="25sp"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_10_button_text"
                android:id="@+id/credits_10_button"
                android:layout_column="3"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="25dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_50_text"
                android:id="@+id/textView2"
                android:textSize="25sp"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/credits_50_button"
                android:text="@string/credits_50_button_text"
                android:textSize="25dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="139dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_100_text"
                android:id="@+id/textView3"
                android:textSize="25sp"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_100_button_text"
                android:id="@+id/credits_100_button"
                android:layout_column="3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="25dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_500_text"
                android:id="@+id/textView4"
                android:textSize="25sp"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_500_button_text"
                android:id="@+id/credits_500_button"
                android:layout_column="3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="25dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/credits_1000_text"
                android:id="@+id/textView5"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_1000_button_text"
                android:id="@+id/credits_1000_button"
                android:layout_column="3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="25dp" />
        </TableRow>

    </TableLayout>

</LinearLayout>